Refactor: use modern Java 8-21 features for cleaner code
- Replace String.format() with formatted() method (Java 15+)
- Replace Collections.emptyList/Map() with List.of/Map.of() (Java 9+)
- Replace StringBuilder loops with Collectors.joining() (Java 8+)
- Add inline comments explaining which Java version introduced each feature

Co-authored-by: boul2gom <56512795+boul2gom@users.noreply.github.com>